# pinescript-mcp

./: .bumpversion.toml  .dockerignore  .gitignore  CHANGELOG.MD  CLAUDE.md  DEVELOPMENT.md  Dockerfile  LICENSE  README.md  fly.toml  pinescript-linter-playground.html  pyproject.toml  server.json  sync-docs.sh
src/pinescript_mcp/: __init__.py  __main__.py  server.py
src/pinescript_mcp/docs/: LLM_MANIFEST.md  pine_v6_functions.json
src/pinescript_mcp/docs/concepts/: common_errors.md  execution_model.md  methods.md  objects.md  timeframes.md
src/pinescript_mcp/docs/reference/: annotations.md  constants.md  keywords.md  migration_v5_to_v6.md  operators.md  pine_v6_cheatsheet.md  types.md  variables.md
src/pinescript_mcp/docs/reference/functions/: collections.md  drawing.md  general.md  request.md  strategy.md  ta.md
src/pinescript_mcp/docs/visuals/: backgrounds.md  bar_coloring.md  bar_plotting.md  colors.md  fills.md  levels.md  lines_and_boxes.md  overview.md  plots.md  tables.md  texts_and_shapes.md
src/pinescript_mcp/docs/writing_scripts/: debugging.md  limitations.md  profiling_and_optimization.md  publishing_scripts.md  style_guide.md
