[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pinescript-mcp"
version = "0.6.8"
description = "MCP server providing Pine Script v6 documentation for AI assistants"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "bch" }]
keywords = ["mcp", "pine-script", "tradingview", "documentation", "ai", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Documentation",
]
dependencies = [
    "fastmcp>=3.1.0",
    "uvicorn>=0.27.0",
    "py-key-value-aio[disk]>=0.4.0",  # DiskStore for persistent caching
    "pynescript>=0.3.0",  # Pine Script AST parser for syntax validation
    "prometheus_client>=0.21.0",  # Metrics for Fly.io Grafana
]

[project.urls]
Homepage = "https://gitlab.com/articat1066/pinescript-v6-mcp"
Documentation = "https://gitlab.com/articat1066/pinescript-v6-mcp#readme"
Repository = "https://gitlab.com/articat1066/pinescript-v6-mcp"

[project.scripts]
pinescript-mcp = "pinescript_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pinescript_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "src/pinescript_mcp/**/*.py",
    "src/pinescript_mcp/**/*.md",
    "src/pinescript_mcp/**/*.json",
]
